# nafnaapp-backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py
app/names/: hvk.txt
names/: female.txt  kvk.txt  male.txt  milli.txt
web/: Dockerfile  README.md  app.py  requirements.txt
